add table css & app material module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-  <span>Sound Tunes</span>
+  <span>Fnd Store</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
