--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -1,47 +1,56 @@
 <mat-card>
-  <mat-toolbar color="primary">Products</mat-toolbar>
-  <table
-    mat-table
-    [dataSource]="products"
-    class="mat-elevation-z8"
-  >
-    <ng-container matColumnDef="id">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      > No. </th>
-      <td
-        mat-cell
-        *matCellDef="let product"
-      > {{product.id}} </td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      > Name </th>
-      <td
-        mat-cell
-        *matCellDef="let product"
-      > {{product.name}} </td>
-    </ng-container>
-    <ng-container matColumnDef="quantity">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      > Quantity </th>
-      <td
-        mat-cell
-        *matCellDef="let product"
-      > {{product.quantity}} </td>
-    </ng-container>
-    <tr
-      mat-header-row
-      *matHeaderRowDef="displayedColumns"
-    ></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns;"
-    ></tr>
-  </table>
+  <div *ngIf="products$ | async as products; else loading">
+    <table
+      mat-table
+      [dataSource]="products"
+      class="mat-elevation-z8"
+    >
+      <caption>
+        <mat-toolbar color="primary">Products</mat-toolbar>
+      </caption>
+      <ng-container matColumnDef="id">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+        > No. </th>
+        <td
+          mat-cell
+          *matCellDef="let product"
+        > {{product.id}} </td>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+        > Name </th>
+        <td
+          mat-cell
+          *matCellDef="let product"
+        > {{product.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="quantity">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+        > Quantity </th>
+        <td
+          mat-cell
+          *matCellDef="let product"
+        > {{product.quantity}} </td>
+      </ng-container>
+      <tr
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns;"
+      ></tr>
+    </table>
+  </div>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 </mat-card>
