--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="min-width">
   <mat-toolbar color="primary">Product details</mat-toolbar>
   <mat-card-content>
     <form [formGroup]="form">
