add non nullable form builder and typed form

--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -18,6 +18,7 @@
           matInput
           placeholder="Product quantity"
           formControlName="quantity"
+          type="number"
           required
         >
         <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
