--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -26,7 +26,10 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button>Cancel</button>
+    <button
+      mat-raised-button
+      (click)="onCancel()"
+    >Cancel</button>
     <button
       mat-raised-button
       color="primary"
