--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -1,82 +1,14 @@
 <mat-card>
-  <div *ngIf="products$ | async as products; else loading">
-    <table
-      mat-table
-      [dataSource]="products"
-      class="mat-elevation-z8"
-    >
-      <caption>
-        <mat-toolbar color="primary">Products</mat-toolbar>
-      </caption>
-      <ng-container matColumnDef="id">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-        > No. </th>
-        <td
-          mat-cell
-          *matCellDef="let product"
-        > {{product.id}} </td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-        > Name </th>
-        <td
-          mat-cell
-          *matCellDef="let product"
-        > {{product.name}} </td>
-      </ng-container>
-      <ng-container matColumnDef="quantity">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-        > Quantity </th>
-        <td
-          mat-cell
-          *matCellDef="let product"
-        > {{product.quantity}} </td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>
-          <button
-            mat-mini-fab
-            color="accent"
-            aria-label="Add a product"
-          >
-            <mat-icon (click)="onAdd()">add</mat-icon>
-          </button>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let product">
-          <button
-            mat-mini-fab
-            color="primary"
-            aria-label="Edit product"
-          >
-            <mat-icon>edit</mat-icon>
-          </button><button
-            mat-mini-fab
-            color="warn"
-            aria-label="Delete product"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
-      <tr
-        mat-header-row
-        *matHeaderRowDef="displayedColumns"
-      ></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns;"
-      ></tr>
-    </table>
+  <mat-toolbar color="primary">Products</mat-toolbar>
+  <div class="mat-elevation-z8 flex-column">
+    <app-products-table
+      *ngIf="products$ | async as products; else loading"
+      [products]="products"
+    ></app-products-table>
+    <ng-template #loading>
+      <div class="loading-spinner">
+        <mat-spinner></mat-spinner>
+      </div>
+    </ng-template>
   </div>
-  <ng-template #loading>
-    <div class="loading-spinner">
-      <mat-spinner></mat-spinner>
-    </div>
-  </ng-template>
 </mat-card>
