--- a/src/app/products/products-table/products-table.component.html
+++ b/src/app/products/products-table/products-table.component.html
@@ -3,8 +3,12 @@
   class="mat-elevation-z8"
 >
   <ng-container matColumnDef="id">
-    <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+    <mat-header-cell
+      *matHeaderCellDef
+      class="id-column"
+    > No. </mat-header-cell>
     <mat-cell
+      class="id-column"
       mat-cell
       *matCellDef="let product"
     > {{product.id}} </mat-cell>
@@ -35,13 +39,14 @@
       class="action-column"
     >
       <button
-        mat-mini-fab
+        mat-icon-button
         color="primary"
         aria-label="Edit product"
       >
         <mat-icon>edit</mat-icon>
-      </button><button
-        mat-mini-fab
+      </button>
+      <button
+        mat-icon-button
         color="warn"
         aria-label="Delete product"
       >
