--- a/src/app/products/products-table/products-table.component.scss
+++ b/src/app/products/products-table/products-table.component.scss
@@ -4,6 +4,13 @@
 }
 
 .action-column {
-  flex: 0 0 85px;
+  flex: 0 0 90px;
   justify-content: space-around;
+  padding: 0;
+}
+
+.id-column {
+  flex: 0 0 45px;
+  justify-content: center;
+  padding: 0;
 }
