fix button add product click

--- a/src/app/products/products-table/products-table.component.html
+++ b/src/app/products/products-table/products-table.component.html
@@ -30,8 +30,9 @@
         mat-mini-fab
         color="accent"
         aria-label="Add a product"
+        (click)="onAdd()"
       >
-        <mat-icon (click)="onAdd()">add</mat-icon>
+        <mat-icon>add</mat-icon>
       </button>
     </mat-header-cell>
     <mat-cell
