feat: delete product

--- a/src/app/products/products-table/products-table.component.html
+++ b/src/app/products/products-table/products-table.component.html
@@ -50,6 +50,7 @@
         mat-icon-button
         color="warn"
         aria-label="Delete product"
+        (click)="onDelete(product)"
       >
         <mat-icon>delete</mat-icon>
       </button>
